いろいろ 特にUCP詳細(未完成)